CSS. Remove header in Dashboard page

--- a/scss/edunao/post.scss
+++ b/scss/edunao/post.scss
@@ -21,3 +21,11 @@
 .userprofile .mycertificates td {
     border: none;
 }
+
+
+/*
+*  DASHBOARD
+*/
+.pagelayout-mydashboard .page-header-headings {
+    display: none;
+}
