Fix iPhone zoom

--- a/scss/edunao123/post.scss
+++ b/scss/edunao123/post.scss
@@ -97,3 +97,11 @@ tr:nth-child(n+2) {
 .pagelayout-mydashboard .page-header-headings {
     display: none;
 }
+
+
+/*
+*  LOGIN PAGE
+*/
+#page-login-index .login-container .form-control-lg {
+    font-size: 1rem;
+}
