Add divider between sign in and SSO providers

--- a/scss/edunao123/post.scss
+++ b/scss/edunao123/post.scss
@@ -211,6 +211,12 @@ tr:nth-child(n+2) {
     font-size: 1rem;
 }
 
+.login-identityproviders {
+    border-top: 1px solid #dee2e6;
+    margin-top: 20px;
+    padding-top: 20px;
+}
+
 @media (min-width: 576px) {
     .login-identityproviders a.btn-block {
         display: inline-block;
