Change login with IDP label

--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -190,7 +190,7 @@
         <div class="login-divider"></div>
         <div class="login-identityproviders">
             {{#showidploginintro}}
-            <h2 class="login-heading">{{#str}} potentialidps, auth {{/str}}</h2>
+            <h2 class="login-heading">{{#str}} potentialidps, theme_edunao123 {{/str}}</h2>
             {{/showidploginintro}}
             {{#identityproviders}}
                 <a class="btn login-identityprovider-btn btn-block btn-secondary" href="{{url}}">
