--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -231,13 +231,13 @@
     {{/canloginasguest}}
     </div>
     <div class="login-divider"></div>
-    <div class="d-flex">
-        <button type="button" class="btn btn-secondary" {{!
-        }} data-modal="alert"{{!
-        }} data-modal-title-str='["cookiesenabled", "core"]' {{!
-        }} data-modal-content-str='["cookiesenabled_help_html", "core"]'{{!
-        }}>{{#str}}cookiesnotice{{/str}}</button>
-    </div>
+</div>
+<div class="cookies-notice">
+    <button type="button" class="btn btn-link mt-2 p-0" {{!
+    }} data-modal="alert"{{!
+    }} data-modal-title-str='["cookiesenabled", "core"]' {{!
+    }} data-modal-content-str='["cookiesenabled_help_html", "core"]'{{!
+    }}>{{#str}}cookiesnotice{{/str}}</button>
 </div>
 
 {{#js}}
