--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -160,8 +160,7 @@
             <input type="text" name="username" id="username" {{!
                 !}}class="form-control form-control-lg" {{!
                 !}}value="{{username}}" {{!
-                !}}placeholder="{{^canloginbyemail}}{{#cleanstr}}username{{/cleanstr}}{{/canloginbyemail}}{{!
-                !}}{{#canloginbyemail}}{{#cleanstr}}usernameemail{{/cleanstr}}{{/canloginbyemail}}" {{!
+                !}}placeholder="{{#str}} email {{/str}}" {{!
                 !}}autocomplete="username">
         </div>
         <div class="login-form-password form-group">
