Fix buttons style in moodle 4.5

--- a/scss/edunao123/post.scss
+++ b/scss/edunao123/post.scss
@@ -363,6 +363,8 @@ body.format-edai .activity-information {
     width: 26px;
     height: 38px;
     margin: 0;
+    max-width: 52px;
+    max-height: 52px;
 }
 
 .path-mod .page-context-header,
